# aletheia

./: .dispatch-prompt.md  .dispatch.err  .env.example  .envrc  .gitignore  .gitleaks.toml  .kanon-ci.toml  .kanon-lint-ignore  .mailmap  .mailmap.example  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  ALETHEIA.md  CHANGELOG.md  CLAUDE-CODE-ASSIGNMENT-TESTING.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTEXT_STATE_FOUNDATION_COMPLETE.md  CONTRIBUTING.md  CRATE-INDEX.toml  Cargo.toml  Cross.toml  DEPENDENCIES-AUDIT.md  ESCALATION.md  EXECUTION_ENGINE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSING.md  PII-REWRITE.md  PLANNING_DASHBOARD_STATUS.md  PROMPT.md  QUICKSTART.md  README.md  RESCUE.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  (+11 more)
crates/agora/: CLAUDE.md  Cargo.toml  README.md  aletheia-agora.cdx.json  clippy.toml
crates/agora/src/: connection_utils.rs  error.rs  lib.rs  listener.rs  metrics.rs  registry.rs  router.rs  types.rs
crates/agora/tests/: public_api.rs  public_api_registry.rs  public_api_router.rs  public_api_semeion.rs  public_api_types.rs
crates/aletheia/: CLAUDE.md  Cargo.toml  aletheia.cdx.json  build.rs  clippy.toml  hub-words.toml
crates/aletheia-classify/: Cargo.toml
crates/aletheia-classify/src/: classifier.rs  error.rs  lib.rs
crates/aletheia-memory-mcp/: Cargo.toml  README.md
crates/aletheia-memory-mcp/src/: error.rs  lib.rs  main.rs  server.rs  tools.rs
crates/aletheia-memory-mcp/tests/: integration.rs
crates/aletheia-routing/: Cargo.toml
crates/aletheia-routing/src/: lib.rs  router.rs  store.rs  types.rs
crates/aletheia-sessions-migrate/: Cargo.toml  FIELD_MAPPING.md
crates/aletheia-sessions-migrate/src/: cli.rs  dest.rs  error.rs  lib.rs  main.rs  migrate.rs  schema.rs  source.rs  verify.rs
crates/aletheia-sessions-migrate/tests/: idempotency.rs  integration.rs  legacy_extras.rs  orphan_recovery.rs  round_trip_integrity.rs  schema_mismatch.rs  staging_durability.rs  strict_enums.rs  tiny_synthetic.rs  verification_completeness.rs
crates/aletheia/src/: cli.rs  cli_tests.rs  daemon_bridge.rs  dispatch.rs  embedding_config.rs  error.rs  external_tools.rs  init.rs  knowledge_adapter.rs  knowledge_maintenance.rs  main.rs  migrate_memory.rs  planning_adapter.rs  provider_config.rs  runtime.rs  server.rs  session_retention.rs  skills.rs  status.rs
crates/aletheia/tests/: default_features.rs  integration_server.rs  smoke_test.rs
crates/basanos/: Cargo.toml
crates/basanos/src/: error.rs  lib.rs  main.rs
crates/basanos/standards/: API.md  PLANNING.md
crates/basanos/tests/: planning_falsifier_tests.rs
crates/daemon/: CLAUDE.md  Cargo.toml  aletheia-oikonomos.cdx.json  clippy.toml
crates/daemon/src/: bridge.rs  coordination.rs  cron_expr.rs  error.rs  execution.rs  execution_knowledge_tests.rs  execution_tests.rs  kairos.rs  kairos_multi.rs  lib.rs  metrics.rs  probe.rs  prosoche.rs  prosoche_audit.rs  prosoche_audit_tests.rs  prosoche_tests.rs  runner.rs  runner_tests.rs  schedule.rs  self_prompt.rs  state.rs  triggers.rs  trust.rs  watchdog.rs  watchdog_tests.rs
crates/daemon/tests/: daemon_retention_registration.rs  public_api.rs  public_api_config.rs  public_api_maintenance.rs  public_api_misc.rs  public_api_probes.rs  public_api_scheduling.rs
crates/dianoia/: CLAUDE.md  Cargo.toml  aletheia-dianoia.cdx.json  clippy.toml
crates/dianoia/src/: attention.rs  error.rs  gate.rs  handoff.rs  intent.rs  lib.rs  metrics.rs  orchestrate.rs  phase.rs  plan.rs  project.rs  reconciler.rs  research.rs  runtime.rs  state.rs  state_tests.rs  stuck.rs  verify.rs  workspace.rs
crates/dianoia/tests/: public_api.rs  public_api_core.rs  public_api_gate_workspace.rs
crates/diaporeia/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-diaporeia.cdx.json  clippy.toml
crates/diaporeia/src/: auth.rs  client.rs  error.rs  lib.rs  rate_limit.rs  repomix.rs  sanitize.rs  serena.rs  server.rs  state.rs  transport.rs
crates/diaporeia/tests/: mcp_inventory_drift.rs  public_api.rs  public_api_claims_state.rs  public_api_repomix.rs  public_api_resources.rs  public_api_scoped_access.rs  public_api_transport.rs  serena_e2e.rs
crates/eidos/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-eidos.cdx.json
crates/eidos/src/: bookkeeping.rs  id.rs  knowledge.rs  lib.rs  (+6 more)
crates/energeia/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-energeia.cdx.json
crates/episteme/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  README.md  aletheia-episteme.cdx.json  clippy.toml
crates/eval/: CLAUDE.md  Cargo.toml  aletheia-dokimion.cdx.json  clippy.toml
crates/gnosis/: Cargo.toml  README.md
crates/graph-builder/: Cargo.toml
crates/graphe/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-graphe.cdx.json  clippy.toml
crates/hermeneus/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-hermeneus.cdx.json  clippy.toml
crates/integration-tests/: CLAUDE.md  Cargo.toml  aletheia-integration-tests.cdx.json  clippy.toml
crates/koina/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-koina.cdx.json  build.rs  clippy.toml
crates/krites/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  DESIGN.md  aletheia-krites.cdx.json  clippy.toml
crates/melete/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-melete.cdx.json  clippy.toml
crates/mneme/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-mneme.cdx.json  clippy.toml
crates/mneme-bench/: Cargo.toml
crates/mneme-engine/: Cargo.toml
crates/nous/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  aletheia-nous.cdx.json  clippy.toml
crates/organon/: .kanon-lint-ignore  CLAUDE.md  Cargo.toml  README.md  aletheia-organon.cdx.json  clippy.toml
fuzz/: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml
fuzz/fuzz_targets/: fuzz_config_parsing.rs  fuzz_knowledge_roundtrip.rs  fuzz_tool_dispatch.rs
tui/: Cargo.toml  README.md
tui/src/: actions.rs  app.rs  clipboard.rs  config.rs  diff.rs  error.rs  events.rs  highlight.rs  hyperlink.rs  keybindings.rs  lib.rs  main.rs  mapping.rs  markdown.rs  msg.rs  sanitize.rs  theme.rs
(+6970 files in other folders)
