[workspace]
resolver = "2"
members = [
    "crates/aletheia",
    "crates/diaporeia",
    "crates/dianoia",
    "crates/eidos",
    "crates/episteme",
    "crates/agora",
    "crates/daemon",
    "crates/eval",
    "crates/hermeneus",
    "crates/integration-tests",
    "crates/graphe",
    "crates/koina",
    "crates/krites",
    "crates/mneme",
    "crates/melete",
    "crates/nous",
    "crates/organon",
    "crates/pylon",
    "crates/symbolon",
    "crates/taxis",
    "crates/thesauros",
    "crates/theatron/core",
    "crates/theatron/tui",
]
# WHY: theatron-desktop requires GTK3/webkit2gtk system libraries (via Dioxus
# desktop/webview) which are not available in CI. Excluded from workspace to
# avoid cargo-deny advisory failures on GTK deps and build failures on CI.
# Build standalone: `cargo build -p theatron-desktop --manifest-path crates/theatron/desktop/Cargo.toml`
exclude = [
    "crates/theatron/desktop",
]

[workspace.package]
version = "0.13.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/forkwright/aletheia"
rust-version = "1.94"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Deny-level
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"

# Panics in library code must be explicit and justified
unwrap_used = "deny"
expect_used = "deny"

# Correctness: holding std::sync::Mutex across .await causes deadlocks
await_holding_lock = "deny"
string_slice = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
large_types_passed_by_value = "warn"
map_err_ignore = "warn"
match_wildcard_for_single_variants = "warn"
needless_for_each = "warn"
rc_mutex = "warn"
string_add = "warn"
# string_to_string removed in clippy 1.94 — covered by implicit_clone (line 54)
trait_duplication_in_bounds = "warn"
unused_self = "warn"

# Safety: numeric cast auditing (incremental)
as_conversions = "warn"
cast_possible_truncation = "warn"
indexing_slicing = "warn"

# Architectural boundary enforcement: each crate's clippy.toml lists what it
# may not call. Without these lint levels the clippy.toml entries are inert.
disallowed_methods = "deny"
disallowed_types = "deny"

[workspace.dependencies]
base64 = "0.22"
rayon = "1"

# Error handling
snafu = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"

# HTTP
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json", "http2", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit", "set-header", "fs"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }

# Secrets
zeroize = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics
prometheus = { version = "0.14", features = ["process"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Types
compact_str = { version = "0.9", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Time
# chrono required by the `cron` crate's iterator API; versioned here for
# consistency. All direct time work should use jiff.
chrono = "0.4"
cron = "0.15"
jiff = "0.2"

# Async utilities
bytes = "1"
futures = "0.3"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Compression
flate2 = "1"

# TLS / Security
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rcgen = "0.14"
regex = "1"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# FFI
rustix = { version = "1", default-features = false, features = ["fs", "mm", "thread"] }

# Random number generation
rand = "0.9"

# Testing
proptest = "1"
static_assertions = "1.1"
tempfile = "3"
wiremock = "0.6"

[profile.dev]
opt-level = 1
# WHY: 16 codegen units reduces linker pressure compared to the prior 256
# while keeping enough parallelism for fast incremental builds. On CI the
# smaller artifact set also improves cache hit rates across runs.
codegen-units = 16
# WHY: "unpacked" writes debug info to separate .dwo files instead of
# embedding it in the final binary, cutting link time on Linux by ~30%.
# On macOS this is already the default; on Windows it falls back to "packed".
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

# WHY: proc-macro crates are host binaries executed during compilation.
# Compiling them at opt-level 1 (vs 2) reduces cold-build time without
# measurably slowing macro expansion on this workspace, since proc-macro
# expansion time is dominated by I/O and serde parse work, not CPU-bound
# optimization.
[profile.dev.package.syn]
opt-level = 1

[profile.dev.package.proc-macro2]
opt-level = 1

[profile.dev.package.serde_derive]
opt-level = 1

[profile.dev.package.tokio-macros]
opt-level = 1

[profile.dev.package.snafu-derive]
opt-level = 1

[profile.dev.package.tracing-attributes]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
