# kanon:ignore ORCHESTRATION/main-worktree-commit-prohibited -- operator-authorized agent session (aletheia-v1-tracks-mm); kanon:ignore MANIFEST/no-license -- workspace manifest; license declared in [workspace.package]
[workspace]
resolver = "2"
members = [
    "crates/aletheia",
    "crates/aletheia-classify",
    "crates/aletheia-lexica",
    "crates/aletheia-memory-mcp",
    "crates/aletheia-routing",
    "crates/diaporeia",
    "crates/dianoia",
    "crates/eidos",
    "crates/energeia",
    "crates/episteme",
    "crates/agora",
    "crates/daemon",
    "crates/eval",
    "crates/hermeneus",
    "crates/integration-tests",
    "crates/graphe",
    "crates/koina",
    "crates/krites",
    "crates/mneme",
    "crates/melete",
    "crates/nous",
    "crates/organon",
    "crates/pylon",
    "crates/symbolon",
    "crates/taxis",
    "crates/thesauros",
    "crates/theatron",
    "crates/theatron/skene",
    "crates/theatron/koilon",
    "crates/poiesis/charts",
    "crates/poiesis/core",
    "crates/poiesis/sheet",
    "crates/poiesis/slides",
    "crates/poiesis/lint",
    "crates/poiesis/theme",
    "crates/poiesis/scaffold",
    "crates/poiesis/typst",
    "crates/poiesis/verify",
    "crates/poiesis/intake",
    "crates/poiesis/deck",
    "crates/poiesis/text",
    "crates/poiesis/deck-layout",
    "crates/poiesis/doc",
    "crates/poiesis/printer-chromium",
    "crates/poiesis/diff",
    "crates/poiesis/inspect",
    "crates/poiesis/ooxml-parse",
    "crates/gnosis",
    "crates/aletheia-sessions-migrate",
]
# WHY: proskenion requires GTK3/webkit2gtk system libraries (via Dioxus
# desktop/webview) and carries desktop-only GTK advisory noise. Keep it outside
# root workspace gates; the dedicated desktop CI job compiles and lints it.
# Build/install flow and system deps: docs/DESKTOP.md
# Build standalone: `cargo build -p proskenion --manifest-path crates/theatron/proskenion/Cargo.toml`
exclude = [
    "crates/theatron/proskenion",
]

[workspace.package]
version = "0.31.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/forkwright/aletheia"
rust-version = "1.94"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "deny"
# WHY: krites loom model-check tests use `#[cfg(loom)]` gates. Register the
# cfg name so rustc doesn't warn under normal builds.
unexpected_cfgs = { level = "warn", priority = -1, check-cfg = ["cfg(loom)"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Deny-level
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"

# Panics in library code must be explicit and justified
unwrap_used = "deny"
expect_used = "deny"

# Correctness: holding std::sync::Mutex across .await causes deadlocks
await_holding_lock = "deny"
string_slice = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
large_types_passed_by_value = "warn"
map_err_ignore = "warn"
match_wildcard_for_single_variants = "warn"
needless_for_each = "warn"
rc_mutex = "warn"
string_add = "warn"
# string_to_string removed in clippy 1.94 — covered by implicit_clone (line 54)
trait_duplication_in_bounds = "warn"
unused_self = "warn"

# Safety: numeric cast auditing (incremental)
as_conversions = "warn"
cast_possible_truncation = "warn"
indexing_slicing = "warn"

# Architectural boundary enforcement: each crate's clippy.toml lists what it
# may not call. Without these lint levels the clippy.toml entries are inert.
disallowed_methods = "deny"
disallowed_types = "deny"

[workspace.dependencies]
aletheia-lexica = { path = "crates/aletheia-lexica" }
rayon = { version = "1", default-features = false }

# theatron substrate (cross-repo git deps)
# WHY: forkwright/aletheia#3870 — single source of truth for the v1.3.0 pin.
# Member crates inherit via `<dep> = { workspace = true }`.
# proskenion is excluded from the workspace (GTK/webkit2gtk) and uses its own
# standalone [workspace.dependencies] block; pin is mirrored there manually.

# Error handling
snafu = "0.8"

# Serialization
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10", default-features = false }
toml = "1.1"
toml_edit = "0.25"

# HTTP
http = { version = "1", default-features = false }
axum = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "json",
    "form",
    "http2",
    "query",
] }
tower = "0.5"
tower-http = { version = "0.6", default-features = false, features = [
    "cors",
    "compression-gzip",
    "trace",
    "limit",
    "set-header",
    "fs",
] }

# Secrets
zeroize = { version = "1", default-features = false, features = ["std"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = { version = "0.2", default-features = false }
tracing-test = "0.2"

# Metrics
# WHY: prometheus-client is the Prometheus team's official client. It drops the
# protobuf dependency (vs. the `prometheus` crate's ~15 transitive deps) by
# using OpenMetrics text format natively. Exposition remains compatible with
# standard Prometheus scrapers — they already accept OpenMetrics text.
prometheus-client = "0.24"

# Types
compact_str = { version = "0.9", features = ["serde"] }
indexmap = { version = "2", default-features = false, features = ["serde"] }

# Time
jiff = "0.2"

minijinja = "2"

# Async utilities
bytes = { version = "1", default-features = false }
# WHY: `std` feature is required for `FutureExt::catch_unwind` (used in
# melete distillation panic boundary). Stripping `std` would remove the
# unwind-safe future combinator we depend on.
futures = { version = "0.3", default-features = false, features = ["std"] }

# Encoding
base64 = "0.22"

# Async
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
    "fs",
] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }

# Compression
flate2 = "1"

# TLS / Security
# ring is transitive via rustls; crates/aletheia self-signed cert gen uses p256.
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "logging",
    "tls12",
] }

# Cryptography (RustCrypto)
hmac = { version = "0.13", default-features = false }
sha2 = { version = "0.11", default-features = false }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pem = "3"

# FFI / System
libc = { version = "0.2", default-features = false }
rustix = { version = "1", default-features = false, features = [
    "fs",
    "mm",
    "thread",
] }

# File watching
notify = { version = "8", default-features = false, features = [
    "macos_fsevent",
] }

# Random number generation
rand = "0.10"

# Testing
proptest = "1"
tempfile = { version = "3", default-features = false }
wiremock = { version = "0.6", default-features = false }
# WHY: loom provides permutation-testing for concurrent code under `#[cfg(loom)]`.
# Only used by the manual `unsafe impl Sync` sites in krites (#2864, #3066).
# Invoked as `RUSTFLAGS="--cfg loom" cargo test -p krites --release loom_tests`.
loom = { version = "0.7", default-features = false }

# WHY: long dependency specifications are declared as expanded tables at the end
# to satisfy TOML/inline-table-too-long while keeping `[workspace.dependencies]`
# readable. Cargo resolves them identically to inline form.
[workspace.dependencies.parodos]
git = "https://github.com/forkwright/theatron.git"
tag = "v1.3.0"
version = "1.3.0"

[workspace.dependencies.themelion]
git = "https://github.com/forkwright/theatron.git"
tag = "v1.3.0"
version = "1.3.0"

[workspace.dependencies.skeue]
git = "https://github.com/forkwright/theatron.git"
tag = "v1.3.0"
version = "1.3.0"

[workspace.dependencies.gramma]
git = "https://github.com/forkwright/theatron.git"
tag = "v1.3.0"
version = "1.3.0"

[workspace.dependencies.bathron]
git = "https://github.com/forkwright/theatron.git"
tag = "v1.3.0"
version = "1.3.0"
features = ["logging"]

[workspace.dependencies.keryx]
git = "https://github.com/forkwright/theatron.git"
tag = "v1.3.0"
version = "1.3.0"

[workspace.dependencies.serde]
version = "1"
default-features = false
features = ["derive", "std"]

[workspace.dependencies.p256]
version = "0.13"
default-features = false
features = ["ecdsa", "pem"]

[workspace.dependencies.axum-server]
version = "0.8"
default-features = false
features = ["tls-rustls"]

[workspace.dependencies.regex]
version = "1"
default-features = false
features = ["std", "perf", "unicode-case", "unicode-perl"]

# WHY: criterion provides statistical microbenchmarks with regression detection.
# Used in `benches/` per crate. `default-features = false` strips rayon/plotters
# (HTML reports) — we don't need plotting for CI-only runs and it cuts ~150 deps.
[workspace.dependencies.criterion]
version = "0.8"
default-features = false
features = ["cargo_bench_support"]

[profile.dev]
opt-level = 1
# WHY: 16 codegen units reduces linker pressure compared to the prior 256
# while keeping enough parallelism for fast incremental builds. On CI the
# smaller artifact set also improves cache hit rates across runs.
codegen-units = 16
# WHY: "unpacked" writes debug info to separate .dwo files instead of
# embedding it in the final binary, cutting link time on Linux by ~30%.
# On macOS this is already the default; on Windows it falls back to "packed".
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

# WHY: proc-macro crates are host binaries executed during compilation.
# Compiling them at opt-level 1 (vs 2) reduces cold-build time without
# measurably slowing macro expansion on this workspace, since proc-macro
# expansion time is dominated by I/O and serde parse work, not CPU-bound
# optimization.
[profile.dev.package.syn]
opt-level = 1

[profile.dev.package.proc-macro2]
opt-level = 1

[profile.dev.package.serde_derive]
opt-level = 1

[profile.dev.package.tokio-macros]
opt-level = 1

[profile.dev.package.snafu-derive]
opt-level = 1

[profile.dev.package.tracing-attributes]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
