[package]
name = "aletheia-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
toml = "1.0"
jiff = "0.2"

# Target crates
aletheia-hermeneus = { path = "../crates/hermeneus" }
aletheia-koina = { path = "../crates/koina" }
aletheia-mneme = { path = "../crates/mneme", features = ["mneme-engine"] }
aletheia-nous = { path = "../crates/nous", features = ["knowledge-store"] }
aletheia-taxis = { path = "../crates/taxis" }

# Prevent this from interfering with the parent workspace
[workspace]
members = ["."]

[[bin]]
name = "fuzz_tool_dispatch"
path = "fuzz_targets/fuzz_tool_dispatch.rs"
doc = false

[[bin]]
name = "fuzz_config_parsing"
path = "fuzz_targets/fuzz_config_parsing.rs"
doc = false

[[bin]]
name = "fuzz_knowledge_roundtrip"
path = "fuzz_targets/fuzz_knowledge_roundtrip.rs"
doc = false
