[package]
name = "aletheia-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal dashboard for the Aletheia distributed cognition system"
license = "AGPL-3.0-or-later"

[dependencies]
# Core TUI — ratatui 0.30 defaults to crossterm 0.29
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# HTTP + SSE
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "cookies"], default-features = false }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Markdown rendering
pulldown-cmark = "0.13"

# Text utilities
textwrap = "0.16"
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
toml = "0.8"
dirs = "6"

# Logging (file-based, not stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"

# Futures
futures-util = "0.3"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
