[package]
name = "aletheia-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal dashboard for the Aletheia distributed cognition system"
publish = false

[[bin]]
name = "aletheia-tui"
path = "src/main.rs"

[dependencies]
# Core TUI — ratatui 0.30 defaults to crossterm 0.29
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { workspace = true }

# HTTP + SSE
reqwest = { workspace = true, features = ["stream", "cookies"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Markdown rendering
pulldown-cmark = "0.13"

# Text utilities
unicode-width = "0.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
toml = "1.0"
serde_yaml = { workspace = true }
dirs = "6"

# Logging (file-based, not stdout)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# Error handling — anyhow only for the run_tui() public boundary; snafu for all internals
anyhow = "1"
snafu = { workspace = true }

# Futures
futures-util = "0.3"
syntect = "5"
arboard = "3"
base64 = { workspace = true }
regex = { workspace = true }

# Fuzzy matching for command palette
fuzzy-matcher = "0.3"

# Text diffing (patience, LCS, Myers algorithms)
similar = "2"

# Cross-platform URL/file opening
open = "5"

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
