[package]
name = "agora"
version.workspace = true
description = "Channel registry and provider implementations (Signal)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = []
test-full = []

[dependencies]
koina = { path = "../koina" }
taxis = { path = "../taxis" }
indexmap = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
organon = { path = "../organon", features = ["test-support"] }
tokio = { workspace = true }
wiremock = { workspace = true }
