[package]
name = "agora"
version.workspace = true
description = "Channel registry and provider implementations (Signal)"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
test-core = []
test-full = []
# WHY: opt-in Matrix channel provider (issue #3557). Gated so builds without
# the feature do not pull in the matrix-sdk dependency tree or vodozemac.
matrix = [
    "dep:matrix-sdk-base",
    "dep:matrix-sdk-crypto",
    "dep:async-trait",
    "dep:rmp-serde",
    "dep:fjall",
    "dep:tempfile",
    "koina/fjall",
]

[dependencies]
koina = { path = "../koina" }
taxis = { path = "../taxis" }
indexmap = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

# WHY: the CryptoStore trait is #[async_trait]; we must use the same macro
# to implement it.
async-trait = { version = "0.1", optional = true }
# WHY: rmp-serde gives compact, typed MessagePack encoding for the cached
# in-memory state we flush to fjall, matching the codec used in krites.
rmp-serde = { version = "1.3", optional = true }
tempfile = { workspace = true, optional = true }

# WHY: matrix-sdk-base + matrix-sdk-crypto deliver protocol state + Olm/Megolm
# E2E (wrapping vodozemac) without the full matrix-rust-sdk (which bundles
# sqlite storage we reject in favour of a fjall-backed CryptoStore). See
# thumos/phases/09-secure-communications/design-harmostes.md for the stack
# decision and rationale.
[dependencies.matrix-sdk-base]
version = "0.16"
optional = true
default-features = false

[dependencies.matrix-sdk-crypto]
version = "0.16"
optional = true
default-features = false

# WHY: fjall LSM is imported directly by the crypto store module (same major
# version as used by symbolon/graphe via koina::fjall helpers).
[dependencies.fjall]
version = "3"
optional = true
default-features = false

[dev-dependencies]
organon = { path = "../organon", features = ["test-support"] }
tokio = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
