[package]
name = "aletheia-classify"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/forkwright/aletheia"

[dependencies]
jiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
