[package]
name = "aletheia-classify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Classification metadata and helpers for Aletheia"
publish = false

[lints]
workspace = true

[dependencies]
jiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
