# kanon:ignore NAMING/no-owner-prefix -- WHY: crate/binary name is the existing MCP package surface; renaming is a cross-repo migration outside this security fix.
[package]
name = "aletheia-memory-mcp"
version.workspace = true
description = "Standalone stdio MCP server exposing identity-scoped Aletheia memory tools to external agents"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "aletheia-memory-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK — pin exact per TECHNOLOGY.md policy (matches diaporeia)
rmcp = { version = "=1.5.0", features = [
    "server",
    "macros",
    "transport-io",
] }
schemars = "1"

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

# Error handling
snafu = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
jiff = { workspace = true }

# Internal crates: memory facade + path resolver + UUID generation
mneme = { path = "../mneme", features = ["storage-fjall"] }
taxis = { path = "../taxis" }
koina = { path = "../koina" }

[dev-dependencies]
# WHY: the `client` rmcp feature enables the `ClientHandler` blanket impl we
# need to drive the server in-process during integration tests.
rmcp = { version = "=1.5.0", features = [
    "server",
    "client",
    "macros",
    "transport-io",
] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
jiff = { workspace = true }

[lints]
workspace = true
