[package]
name = "aletheia-routing"
version.workspace = true
description = "Shared routing trait and empirical success-rate storage for dispatch and interactive paths"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
# Test tiers (see docs/test-tiers.md)
test-core = []
test-full = ["test-core"]

[dependencies]
jiff = { workspace = true, features = ["serde"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
