[package]
name = "aletheia-sessions-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "One-shot SQLite v32 → fjall sessions-store migrator for legacy aletheia 0.15.x instances"
publish = false

[[bin]]
name = "aletheia-sessions-migrate"
path = "src/main.rs"

# WHY: this one-shot legacy migrator is the remaining SQLite reader. The
# production stores are fjall-backed, including gnosis. `bundled` vendors
# libsqlite3-sys so the build is deterministic and does not require a system
# libsqlite3 while old 0.15.x session databases can still be imported.
[dependencies]
graphe = { path = "../graphe" }
eidos = { path = "../eidos" }
fjall = { version = "3", default-features = false, features = ["lz4"] }
koina = { path = "../koina", features = ["fjall"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
